Fixed up a bunch of junk on mobile

--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -1,18 +1,15 @@
 @import "includes";
 
-.group-tabs {
-  margin-top: 15px;
+.visible-xs.nav-tabs {
   margin-left: -15px;
   margin-right: -15px;
 
-  li:first-child {
-    margin-left: 15px;
-  }
+  padding-left: 15px;
 }
 
 // don't use tabs on large screens
 @media (min-width: $screen-sm-min) {
-  .group-tabs .tab-content > .tab-pane {
+  .row.tab-content > .tab-pane {
     display: block;
   }
 }
